--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
+<!-- Modifications copyright © 2017 MarkLogic Corporation. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -23,7 +24,7 @@
     <version>42</version>
   </parent>
   <artifactId>commons-csv</artifactId>
-  <version>1.5.1-SNAPSHOT</version>
+  <version>1.5.1-marklogic</version>
   <name>Apache Commons CSV</name>
   <url>http://commons.apache.org/proper/commons-csv/</url>
   <description>
