--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<!-- Modifications copyright © 2017 MarkLogic Corporation. -->
+<!--
+  Modifications copyright © 2022 MarkLogic Corporation.
+  Added jar packaging type.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
